[metadata]
version = 2018.4.6vc0
name = d3m_outputs
author = NIST MIG
description = D3M outputs validation and scoring code
long_description = file: README.md
description-file = README.md
keywords = d3m, score, validation
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Development Status :: 5 - Production/Stable

[options]
python_requires=>=3.6
zip_safe = False
include_package_data = True
packages = find:
