[metadata]
version = attr: dval.__version__
name = dval
author = NIST MIG
description = DSE/D3M outputs validation and scoring code
long_description = file: README.md
description-file = README.md
keywords = dse, d3m, score, validation
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Development Status :: 5 - Production/Stable

[options]
python_requires=>=3.6
zip_safe = False
include_package_data = True
packages = find:
